--- a/CONF/mega.properties
+++ b/CONF/mega.properties
@@ -9,23 +9,23 @@ Hopex_version==V3
 Hopex_URL_token==/uas/connect/token
 Hopex_URL_open==/api/opensession
 #Hopex_URL_query==/api/graphql/itpm
-Hopex_URL_query==/HOPEXGraphQL/api/itpm
+Hopex_URL_query==/HOPEXGraphQL/api/async/itpm
 Hopex_URL_close==/api/closesession
-Hopex_X_HopexContext== {"EnvironmentId":"PLQLiNbUTfUN","RepositoryId":"wIhUR3hTTfBT","ProfileId":"I9iCqGJg)u00"}
+Hopex_X_HopexContext=={"EnvironmentId":"vkHlStRiTDo5","RepositoryId":"vqXt9MVvPjoL","ProfileId":"757wuc(SGjpJ"}
 Hopex_client_id==HopexAPI
 Hopex_client_secret==secret
-Hopex_environmentId==PLQLiNbUTfUN
-Hopex_RepositoryId==wIhUR3hTTfBT
+Hopex_environmentId==vkHlStRiTDo5
+Hopex_RepositoryId==vqXt9MVvPjoL
 Hopex_grant_type==password
 Hopex_scope==hopex openid read write
 
 
-##Connexion au service ServiceNow##
-ServiceNow_URL==https://dev68338.service-now.com/
+##Connexion to ServiceNow server##
+ServiceNow_URL==https://dev98162.service-now.com/
 ServiceNow_user==admin
-ServiceNow_mdp==uqwY1KpMNeY7
+ServiceNow_mdp==Gv7SbIxs6FyIgLuP
 
-##Fichier de mapping ##
+##Mapping files ##
 mapping_SLA_Level==mapping_SLA_Level.csv
 Application_business_service==Application_business_service
 SoftwareTechnology_SoftwareModel==SoftwareTechnology_SoftwareModel
@@ -33,5 +33,4 @@ businessProcess==businessProcess
 Link_Application_businessProcess==Link_Application_businessProcess
 Business_Process==Business_Process
 
-first_run==true
 first_run==false
